--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -43,7 +43,7 @@
       <div class="Grid-cell">
         <div class="element">
           <a class="no-hover-effect">
-            <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+            <div class="elementCard BYP float cardBorder borderRadiusS shadowBoxLt">
               <div class="img__wrap">
                 <img class="img__img" alt="Work Samples" src="./projectImages/Cover_BYP_AppB2B.png" />
                 <div class="img__description">
@@ -52,7 +52,7 @@
                       <label for="password">
                         <h5>Password</h5>
                       </label>
-                      <input class="PWinputLanding" type="password" id="onboardingSubscription" placeholder="Enter password">
+                      <input class="PWinput" type="password" id="onboardingSubscription" placeholder="Enter password">
 
                       <div class="pwIncorrectHeight">
                         <span id="pwIncorrect">Password is incorrect </span>
@@ -79,7 +79,7 @@
       <div class="Grid-cell">
         <div class="element">
           <a class="no-hover-effect">
-            <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+            <div class="elementCard BYP float cardBorder borderRadiusS shadowBoxLt">
               <div class="img__wrap">
                 <img class="img__img" alt="Work Samples" src="./projectImages/Cover_BYP_B2C.png" />
                 <div class="img__description">
@@ -88,7 +88,7 @@
                       <label for="password">
                         <h5>Password</h5>
                       </label>
-                      <input class="PWinputLanding" type="password" id="consumerBooking" placeholder="Enter password">
+                      <input class="PWinput" type="password" id="consumerBooking" placeholder="Enter password">
 
                       <div class="pwIncorrectHeight">
                         <span id="pwIncorrect">Password is incorrect </span>
@@ -104,7 +104,7 @@
                   <div class="element">
                     <h5>Password is required </h5>
                     <h3 class="arrCard" data-aos="fade-up"><strong>Enhancing the Consumer Booking Flow</strong></h3>
-                    <h4>Increase conversion rates by reducing booking abandonment</h4>
+                    <h4>Increase consumer conversion rates by reducing booking abandonment</h4>
                   </div>
                 </div>
               </div>
@@ -126,7 +126,7 @@
                       <label for="password">
                         <h5>Password</h5>
                       </label>
-                      <input class="PWinputLanding" type="password" id="adminPanel" placeholder="Enter password">
+                      <input class="PWinputLH" type="password" id="adminPanel" placeholder="Enter password">
 
                       <div class="pwIncorrectHeight">
                         <span id="pwIncorrect">Password is incorrect </span>
@@ -155,14 +155,14 @@
           <a class="no-hover-effect">
             <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
               <div class="img__wrap">
-                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_LASO_RX0.png" />
+                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_LASO_RXZero.png" />
                 <div class="img__description">
                   <div class="input-field">
                     <div class="column">
                       <label for="password">
                         <h5>Password</h5>
                       </label>
-                      <input class="PWinputLanding" type="password" id="rxZero" placeholder="Enter password">
+                      <input class="PWinputLH" type="password" id="rxZero" placeholder="Enter password">
 
                       <div class="pwIncorrectHeight">
                         <span id="pwIncorrect">Password is incorrect </span>
@@ -202,7 +202,7 @@
                       <label for="password">
                         <h5>Password</h5>
                       </label>
-                      <input class="PWinputLanding" type="password" id="costCalculator" placeholder="Enter password">
+                      <input class="PWinputLH" type="password" id="costCalculator" placeholder="Enter password">
 
                       <div class="pwIncorrectHeight">
                         <span id="pwIncorrect">Password is incorrect </span>
@@ -217,7 +217,7 @@
                 <div class="element">
                   <div class="element">
                     <h5>Password is required </h5>
-                    <h3 class="arrCard" data-aos="fade-up"><strong>Cost-benefit calculator</strong></h3>
+                    <h3 class="arrCard" data-aos="fade-up"><strong>Cost-benefit Calculator</strong></h3>
                     <h4>Focus on user understand RX Zero business model, improve subscription rate</h4>
                   </div>
                 </div>
@@ -233,9 +233,8 @@
               <img src="./projectImages/Cover_Glorify.png" alt="GLORIFY">
               <div class="element">
                 <div class="element">
-                  <h5>For daily worship</h5>
-                  <h3 class="arrCard" data-aos="fade-up"><strong>GLORIFY</strong></h3>
-                  <h4>Integrating a community experience into the existing Glorify Application</h4>
+                  <h3 class="arrCard" data-aos="fade-up"><strong>Introducing the First Community to Glorify</strong></h3>
+                  <h4>Grasping Glorify users' distinct requirements and shaping the bedrock for a vibrant Christian community within the app</h4>
                 </div>
               </div>
             </div>
@@ -254,10 +253,8 @@
                 <img src="./projectImages/Cover_APPOINTA.png" alt="APPOINTA">
                 <div class="element">
                   <div class="element">
-                    <h5>For job interview scheduling</h5>
-                    <h3 class="arrCard" data-aos="fade-up"><strong>APPOINTA</strong></h3>
-                    <h4>Streamline the job interview scheduling process to make it more efficient,
-                      convenient, and intuitive</h4>
+                    <h3 class="arrCard" data-aos="fade-up"><strong>APPOINTA: Interview Scheduling Made Simple</strong></h3>
+                    <h4>Explore my UX case study aimed at revamping interview scheduling. This project streamlines the recruiter's tasks, speeds up hiring, and enhances scheduling experiences, reducing interview coordination time and boosting recruitment efficiency.</h4>
                   </div>
                 </div>
               </div>
@@ -272,11 +269,17 @@
               <img src="./projectImages/Cover_SEER.png" alt="SEER">
               <div class="element">
                 <div class="element">
-                  <h5>For tracking business performance</h5>
-                  <h3 class="arrCard" data-aos="fade-up"><strong>SEER</strong></h3>
+                  <h3 class="arrCard" data-aos="fade-up"><strong>SEER: Enhancing Brand Impact on Reddit</strong></h3>
                   <!--Analysis Report-->
-                  <h4>Help the brand managers understand their potential users and promote their
-                    brand on Reddit</h4>
+                  <h4>A conceptual UX case study aimed at transforming Reddit data into actionable insights for brand marketers. This design explores the potential of intuitive analytics to understand user sentiment and engagement, offering a glimpse into the future of targeted marketing strategies.
+                  
+
+
+
+
+
+
+                  </h4>
                 </div>
               </div>
             </div>
