--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -4350,31 +4350,33 @@ pageURL:'', thumbnailImgURL: 'vickywang_web.png'
           <div class="blankHXS"></div>
           <div class="wrapper">
             <div class="Grid-cell">
-              <h2 class="element">Horizontal layout with background color</h2>
+              <h2 class="element">Slideshow Title</h2>
             </div>
           </div>
-          <div class="wrapper LRcarousel Grid Grid--gutters Grid--1of4 Grid--center u-textCenter"
-            aria-label="LRcarousel" Tabindex="0" id="carousel1">
-            <div class="carousel__nav Grid-cell">
-              <a class="slider-nav" aria-label="Go to slide 1">
-                <div>Lorem ipsum</div>
-              </a>
-              <a class="slider-nav" aria-label="Go to slide 2">
-                <div>Lorem ipsum</div>
-              </a>
-              <a class="slider-nav" aria-label="Go to slide 3">
-                <div>Lorem ipsum</div>
-              </a>
-            </div>
-            <div class="LRslides Grid-cell">
-              <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
-                <img src="./Placeholder.svg" alt="">
+          <div class="wrapper">
+            <div class=" LRcarousel Grid Grid--gutters Grid--1of4 Grid--center u-textCenter" aria-label="LRcarousel" Tabindex="0" id="carousel1">
+              <div class="carousel__nav Grid-cell">
+                <a class="slider-nav" aria-label="Go to slide 1">
+                  <div>Lorem ipsum</div>
+                </a>
+                <a class="slider-nav" aria-label="Go to slide 2">
+                  <div>Lorem ipsum</div>
+                </a>
+                <a class="slider-nav" aria-label="Go to slide 3">
+                  <div>Lorem ipsum</div>
+                </a>
               </div>
-              <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
-                <img src="./Placeholder.svg" alt="">
-              </div>
-              <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
-                <img src="./Placeholder.svg" alt="">
+              <div class="LRslides Grid-cell">
+                <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+                  <img src="./Placeholder.svg" alt="">
+                </div>
+                <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
+                  <img src="./Placeholder.svg" alt="">
+
+                </div>
+                <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
+                  <img src="./Placeholder.svg" alt="">
+                </div>
               </div>
             </div>
           </div>
