ejs header update

--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -10,7 +10,7 @@
 
 <body>
   <%- include('../shared/progressBar') %>
-  <%- include('../shared/header', {currentPage: 'ARCHITECTURE' }) %>
+  <%- include('../shared/header', {type:'main', currentPage: 'ARCHITECTURE' }) %>
   <div class="blankHM"></div>
   <!--intro-->
   <div class="wrapper">
