--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -12,7 +12,7 @@ pageURL:'', thumbnailImgURL: 'vickywang_web.png'
 
 <body>
   <%- include('../shared/progressBar') %>
-  <%- include('../shared/header', {currentPage: 'PROJECT' }) %>
+  <%- include('../shared/header', {type:'main', currentPage: 'PROJECT' }) %>
 
 
 
