--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -10,7 +10,7 @@
 
 <body>
   <%- include('shared/progressBar') %>
-  <%- include('shared/header', {currentPage: 'PROJECT' }) %>
+  <%- include('shared/header', {type:'main', currentPage: 'PROJECT' }) %>
 
   <div class="blankHM"></div>
 
