--- a/templates/photography/index.ejs
+++ b/templates/photography/index.ejs
@@ -9,7 +9,7 @@
 
 <body>
   <%- include('../shared/progressBar') %>
-  <%- include('../shared/header', {currentPage: 'PHOTOGRAPHY' }) %>
+  <%- include('../shared/header', {type:'main', currentPage: 'PHOTOGRAPHY' }) %>
   <div class="blankHM"></div>
 
   <%- include('../shared/intro', { 
