--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -10,7 +10,7 @@
 
 <body>
   <%- include('../shared/progressBar') %>
-  <%- include('../shared/header', {currentPage: 'ABOUT' }) %>
+  <%- include('../shared/header', {type:'main', currentPage: 'ABOUT' }) %>
 
   <div class="blankHM"></div>
   <%- include('../shared/intro', { version: 'defult',
